# Projekt

./: CMakeLists.txt  glad.c  main  main.cpp
include/: glad.h  glfw3.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
